--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,4 +53,4 @@ jobs:
           author_email: carry0987@users.noreply.github.com
           default_author: user_info
           message: '[skip ci] :sparkles: Update build artifacts'
-          # push: true
+          push: true
