--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,9 +48,7 @@ jobs:
       - uses: EndBug/add-and-commit@v9
         with:
           add: 'build'
-          # commit: --signoff
-          author_name: 'carry0987[bot]'
-          author_email: carry0987@users.noreply.github.com
+          author_name: GitHub Actions
+          author_email: actions@github.com
           default_author: user_info
           message: '[skip ci] :sparkles: Update build artifacts'
-          push: true
