--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: docker-manifest-test
+name: super-duper-tribble
 description: 'Tiny, simple GitHub Action to link Docker manifests easily'
 author: 'carry0987'
 branding:
