--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
         "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript --environment BUILD:production"
     },
     "dependencies": {
-        "@actions/core": "1.11.1",
-        "@actions/exec": "1.1.1",
+        "@actions/core": "^1.11.1",
+        "@actions/exec": "^1.1.1",
         "@carry0987/utils": "^3.8.5",
-        "@docker/actions-toolkit": "0.63.0"
+        "@docker/actions-toolkit": "^0.63.0"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^28.0.6",
